--- a/blocks/root/__container/root__container.css
+++ b/blocks/root/__container/root__container.css
@@ -1,4 +1,4 @@
-.root__container {
+.root__container {    
     max-width: 1280px;
     margin: auto;
     box-sizing: border-box;
@@ -6,4 +6,30 @@
     background-color: #2A2C2F;
     font-family: 'Inter', 'Arial', sans-serif;
     color: white;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    text-rendering: optimizeLegibility;
+}
+
+@media screen and max-width(1024px) {
+    .root__container {
+    max-width: 1024px;
+    }
+}
+
+@media screen and max-width(768px) {
+    .root__container {
+    max-width: 768px;
+    padding: 0;
+    }
+}
+
+@media screen and max-width(425px) {
+    .root__container {
+    max-width: 425px;
+    padding: 0;
+    }
 }
