--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,12 +1,13 @@
-.lead__title {
+.cover__subtitle {
     margin: 0;
     padding: 0;
-    max-width: 720px;
+    max-width: 360px;
     box-sizing: border-box;
     /* width: 100%; */
-    font-size: 96px;
-    line-height: 1;
-    font-weight: 900;
+    font-size: 18px;
+    line-height: 1.22;
+    font-weight: 400;
     font-style: normal;
     text-align: center;
+    align-self: center;
 }
