--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,12 +1,13 @@
-.lead__title {
+.cover__title {
     margin: 0;
-    padding: 0;
-    max-width: 720px;
+    padding: 0 0 32px;
+    max-width: 560px;
     box-sizing: border-box;
     /* width: 100%; */
-    font-size: 96px;
-    line-height: 1;
+    font-size: 72px;
+    line-height: 1.06;
     font-weight: 900;
     font-style: normal;
     text-align: center;
+    align-self: center;
 }
