--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,5 +1,5 @@
 .header__lang-link {
-    margin: 0;
+    margin: 0 18px 0 0;
     padding: 0;
     text-decoration: none;
     line-height: 2;
@@ -8,9 +8,8 @@
     font-weight: 400;
     /* -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 1px; */
-    text-shadow: 1px 1px #000000, 1px -1px #000000, -1px 1px #000000, -1px -1px #000000, 0 4px 4px rgba(0, 0, 0, 0.25);
+    /* text-shadow: 1px 1px #000000, 1px -1px #000000, -1px 1px #000000, -1px -1px #000000, 0 4px 4px rgba(0, 0, 0, 0.25); */
     color: #FFFFFF;
-    margin-right: 18px;
 }
 
 .header__lang-link:last-of-type {
