--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,5 +1,5 @@
 .header__logo {
-    filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
+    /* filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
     stroke: #000000;
-    stroke-width: 1px;
+    stroke-width: 1px; */
 }
