--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,3 +6,9 @@
     align-items: center;
     padding-top: 56px;
 }
+
+@media screen and max-width(1024px) {
+    .lead {
+    width: 100%;
+    }
+}
