--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 35px 0 34px;
     box-sizing: border-box;
-    max-width: 690px;
+    /* max-width: 690px; */
     font-size: 16px;
     line-height: 1.6;
     font-weight: 400;
