--- a/blocks/root/__container/root__container.css
+++ b/blocks/root/__container/root__container.css
@@ -14,22 +14,21 @@
     text-rendering: optimizeLegibility;
 }
 
-@media screen and max-width(1024px) {
+@media screen and (max-width: 1024px) {
     .root__container {
-    max-width: 1024px;
+    max-width: 1024px;    
+    padding: 0;
     }
 }
 
-@media screen and max-width(768px) {
+@media screen and (max-width: 768px) {
     .root__container {
     max-width: 768px;
-    padding: 0;
     }
 }
 
-@media screen and max-width(425px) {
+@media screen and (max-width: 425px) {
     .root__container {
     max-width: 425px;
-    padding: 0;
     }
 }
