--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,7 +1,7 @@
 .intro__title {
     margin: 0;
     padding: 0;
-    max-width: 690px;
+    /* max-width: 690px; */
     box-sizing: border-box;
     /* width: 100%; */
     font-size: 54px;
