--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,3 +3,15 @@
     padding: 92px 394px 92px 100px;
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 1024px) {
+    .intro {
+        padding: 92px 286px 92px 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .intro {
+        padding: 88px 24px;
+    }
+}
