--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -15,3 +15,9 @@
     z-index: 1;
     /* text-align: center; */
 }
+
+@media screen and (max-width: 768px) {
+    .lead__caption {
+    left: 24px;
+    }
+}
