--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -13,18 +13,6 @@
 
 /* @media screen and max-width(1024px) {
     .lead__image {
-    max-height: 580px;
-    }
-}
-
-@media screen and max-width(768px) {
-    .lead__image {
-    max-height: 480px;
-    }
-}
-
-@media screen and max-width(425px) {
-    .lead__image {
-    max-height: 480px;
+    max-width: 928px;
     }
 } */
