--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,3 +10,10 @@
     font-style: normal;
     text-align: center;
 }
+
+/* @media screen and max-width(1024px) {
+    .lead__title {
+    width: 100%;
+    padding-top: 48px;
+    }
+} */
