--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -7,7 +7,14 @@
     padding-top: 56px;
 }
 
-@media screen and max-width(1024px) {
+@media screen and (max-width: 1024px) {
+    .lead {
+    width: calc(100% - 48px*2);
+    padding-top: 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
     .lead {
     width: 100%;
     }
