--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,9 +5,27 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 16px;
-    margin: 0;
+    margin: auto;
     padding: 0;
     box-sizing: border-box;
     /* position: relative;
     padding-bottom: 75%; */
+}
+
+@media screen and (max-width: 1024px) {
+    .photo-grid {
+        width: calc(100% - 48px*2);
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        gap: 14px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .photo-grid {
+        width: calc(100% - 24px*2);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        gap: 16px;
+    }
 }
