--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,17 @@
 .places {
     width: calc(100% - 100px*2);
     margin: auto;
-    padding: 92px 0 0;
+    padding: 94px 0 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .places {
+        width: calc(100% - 48px*2);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .places {
+        width: calc(100% - 24px*2);
+    }
 }
