--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -11,3 +11,9 @@
     text-align: center;
     align-self: center;
 }
+
+@media screen and (max-width: 767px) {
+    .cover__subtitle {
+        font-size: 14px;
+    }
+}
