--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 0 92px;
+    padding: 0 0 15px;
     box-sizing: border-box;
     max-width: 100%;
     position: relative;
@@ -33,8 +33,21 @@
     opacity: 0.8;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .cover {
         min-height: 657px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .cover {
+        min-height: 506px;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .cover {
+        min-height: 200px;
     }
 }
