--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -14,3 +14,11 @@
     opacity: 0.5;
     transition: opacity 1s linear;
 }
+
+@media screen and (max-width: 767px) {
+    .footer__link {
+        font-size: 24px;
+        line-height: 1.12;
+        margin: 0 0 32px;
+    }
+}
