--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -4,3 +4,19 @@
     padding: 0;
     display: flex;
 }
+
+/* @media screen and (max-width: 509px) {
+    .footer__links {
+        margin-bottom: 20px;
+        flex-wrap: wrap;
+    }
+} */
+
+@media screen and (max-width: 767px) {
+    .footer__links {
+        flex-direction: column;
+        align-items: space-between;
+        gap: 32px;
+        margin-bottom: 48px;
+    }
+}
