--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -15,3 +15,10 @@
 .header__lang-link:last-of-type {
     margin-right: 0;
 }
+
+@media screen and (max-width: 424px) {
+    .header__lang-link {
+        font-size: 18px;
+        /* line-height: 1.1; */
+    }
+}
