--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,14 +9,21 @@
     box-sizing: border-box;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .header {
         width: calc(100% - 48px*2);
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .header {
         width: calc(100% - 24px*2);
+    }
+}
+
+@media screen and (max-width: 424px) {
+    .header {
+        width: calc(100% - 16px*2);        
+        padding-top: 16px;
     }
 }
