--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,14 +4,20 @@
     box-sizing: border-box;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .intro {
         padding: 92px 286px 92px 48px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .intro {
         padding: 88px 24px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .intro {
+        padding: 64px 16px;
     }
 }
