--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -7,15 +7,21 @@
     padding-top: 56px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .lead {
     width: calc(100% - 48px*2);
     padding-top: 48px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .lead {
     width: 100%;
     }
 }
+
+/* @media screen and (max-width: 320px) {
+    .lead {
+        max-width: 320px;
+    }
+} */
