--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,11 +8,12 @@
     margin: auto;
     padding: 0;
     box-sizing: border-box;
+    list-style-type: none;
     /* position: relative;
     padding-bottom: 75%; */
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .photo-grid {
         width: calc(100% - 48px*2);
         grid-template-columns: repeat(3, 1fr);
@@ -21,11 +22,20 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .photo-grid {
         width: calc(100% - 24px*2);
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(5, 1fr);
+        grid-template-rows: repeat(6, 1fr);
         gap: 16px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .photo-grid {
+        width: calc(100% - 16px*2);
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(12, 1fr);
+        gap: 12px;
     }
 }
