--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,32 @@
 .place__image {
-    width: calc(100%/2 - 33px);
-    max-height: auto;
+    width: 45.4%;
+    min-height: 45.4%;
+    max-height: 45.4%;
     object-fit: cover;
     align-self: flex-start;
+}
+
+@media screen and (max-width: 1279px) {
+    .place__image {
+        width: 45%;
+        min-height: 45%;
+        max-height: 45%;  
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .place__image {
+        width: 44%;
+        min-height: 44%;
+        max-height: 44%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__image {
+        width: 100%;
+        min-height: 100%;
+        max-height: 100%;
+        margin-bottom: 32px;
+    }
 }
