--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -15,3 +15,10 @@
     opacity: 0.5;
     transition: opacity 1s linear;
 }
+
+@media screen and (max-width: 767px) {
+    .place__link {
+        max-width: 100%;
+        /* align-self: stretch; */
+    }
+}
