--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0 0 26px;
     font-size: 18px;
-    line-height: 1.6;
+    line-height: 1.63;
     font-weight: 400;
     font-style: normal;
 }
@@ -10,3 +10,17 @@
 .place__paragraph:last-of-type {
     margin-bottom: 0;
 }
+
+@media screen and (max-width: 1023px) {
+    .place__paragraph {
+        font-size: 16px;        
+        line-height: 1.6;
+        margin: 0 0 24px;
+    }
+}
+
+/* @media screen and (max-width: 320px) {
+    .place__paragraph {
+        margin: 0;
+    }
+} */
