--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,4 +1,23 @@
 .place__text {
-    width: calc(100%/2 - 30px);    
+    width: 49%;
+    padding-left: 40px;    
     align-self: flex-start;
+}
+
+@media screen and (max-width: 1023px) {
+    .place__text {
+        width: 49.5%;
+        padding-left: 28px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__text {
+        width: calc(100% - 16px * 2);
+        padding: 0;
+        margin: 0;
+        align-self: center;
+        /* padding-left: 16px;
+        padding-right: 16px; */
+    }
 }
