--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,9 +1,31 @@
 .place__title {
-    width: calc(100%/2 - 32px);
+    width: 45.4%;
     padding: 0;
-    margin: 0 0 10px;
+    margin: 0 0 51px;
     font-size: 72px;
     line-height: 1.02;
     font-weight: 900;
     font-style: normal;
+}
+
+@media screen and (max-width: 1023px) {
+    .place__title {
+        font-size: 41px;
+        width: 44.5%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__title {
+        font-size: 38px;
+        width: 43%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .place__title {
+        width: calc(100% - 16px * 2);
+        font-size: 32px;
+        /* padding-left: 16px; */
+    }
 }
