--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,6 +1,26 @@
 .place__website {
-    max-width: calc(100%/2);
+    max-width: 50%;
+    padding-left: 40px;
     display: flex;
-    flex-direction: column;    
-    margin: 0 0 8px;
+    flex-direction: column;   
+    margin: 0 0 48px;
+}
+
+@media screen and (max-width: 1023px) {
+    .place__website {
+        width: 49%;
+        padding-left: 30px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__website {
+        min-width: calc(100% - 16px * 2);
+        /* padding-left: 16px; */
+        justify-content: flex-start;
+        align-items: stretch;
+        padding-left: 16px;
+        margin: 0 0 32px;
+        align-self: flex-start;
+    }
 }
