--- a/blocks/root/__container/root__container.css
+++ b/blocks/root/__container/root__container.css
@@ -14,21 +14,27 @@
     text-rendering: optimizeLegibility;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .root__container {
-    max-width: 1024px;    
-    padding: 0;
+        max-width: 1024px;    
+        padding: 0;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .root__container {
-    max-width: 768px;
+        max-width: 768px;
     }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 767px) {
     .root__container {
-    max-width: 425px;
+        max-width: 425px;
+    }
+}
+
+@media screen and (max-width: 424px) {
+    .root__container {
+        max-width: 320px;
     }
 }
