--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,41 +1,12 @@
 .photo-grid {
     width: 100%;
-    /* height: auto; */
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 16px;
     margin: auto;
     padding: 0;
-    box-sizing: border-box;
-    list-style-type: none;
+    box-sizing: border-box; */
     /* position: relative;
     padding-bottom: 75%; */
-}
-
-@media screen and (max-width: 1279px) {
-    .photo-grid {
-        width: calc(100% - 48px*2);
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        gap: 14px;
-    }
-}
-
-@media screen and (max-width: 1023px) {
-    .photo-grid {
-        width: calc(100% - 24px*2);
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(6, 1fr);
-        gap: 16px;
-    }
-}
-
-@media screen and (max-width: 767px) {
-    .photo-grid {
-        width: calc(100% - 16px*2);
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(12, 1fr);
-        gap: 12px;
-    }
-}
+  }
