готово все кроме 320

--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -16,3 +16,9 @@
         font-size: 32px;
     }
 }
+
+@media screen and (max-width: 424px) {
+    .intro__title {
+        max-width: 251px;
+    }
+}
