--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,18 +1,5 @@
 .lead__image {
-    /* min-width: 100%;
-    height: 615px; 
-    object-fit: cover; */
-    width: 100%;
-    height: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 0;
+    margin: 0;
+    padding: 0;
     object-fit: cover;
 }
-
-/* @media screen and max-width(1024px) {
-    .lead__image {
-    max-width: 928px;
-    }
-} */
