--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 0;
     padding: 0 0 15px;
     box-sizing: border-box;
     max-width: 100%;
     position: relative;
     z-index: 0;
-    overflow: hidden;
     color: #fff;
     text-decoration: none;
     min-height: 760px;
@@ -35,18 +35,25 @@
 
 @media screen and (max-width: 1279px) {
     .cover {
-        min-height: 657px;
+        min-height: 657px;        
+        padding: 0 0 13px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .cover {
-        min-height: 506px;
-        padding: 0;
+        min-height: 495px;
+        padding: 0 0 13px;
     }
 }
 
 @media screen and (max-width: 767px) {
+    .cover {
+        min-height: 200px;
+    }
+}
+
+@media screen and (max-width: 424px) {
     .cover {
         min-height: 200px;
     }
