--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -3,6 +3,12 @@
     padding: 0;
     font-size: 12px;
     line-height: 1.4;
-    font-weight: 600;
+    font-weight: 700;
     font-style: normal;
+}
+
+@media screen and (max-width: 424px) {
+    .intro__list-item {        
+        line-height: 1.6;
+    }
 }
