--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,23 +1,29 @@
 .intro {
     width: 100%;
-    padding: 92px 394px 92px 100px;
+    padding: 83px 394px 92px 100px;
     box-sizing: border-box;
 }
 
 @media screen and (max-width: 1279px) {
     .intro {
-        padding: 92px 286px 92px 48px;
+        padding: 81px 286px 92px 48px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .intro {
-        padding: 88px 24px;
+        padding: 78px 24px 88px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .intro {
         padding: 64px 16px;
+    }
+}
+
+@media screen and (max-width: 424px) {
+    .intro {
+        padding: 53px 16px 64px;
     }
 }
