--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,10 +1,10 @@
 .lead {
     width: calc(100% - 100px*2);
-    margin: auto;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 56px;
+    padding: 56px 0 0;
 }
 
 @media screen and (max-width: 1279px) {
