--- a/blocks/photo-grid/__container/photo-grid__container.css
+++ b/blocks/photo-grid/__container/photo-grid__container.css
@@ -1,12 +1,13 @@
 .photo-grid__container {
-  list-style-type: none;
-  width: 100%;
-    /* height: auto; */
+    list-style-type: none;
+    width: 100%;
+    min-height: 100%;
+    max-height: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 16px;
-    margin: auto;
+    margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
     /* position: relative;
