--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,12 +1,4 @@
 .photo-grid {
     width: 100%;
-    /* display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap: 16px;
-    margin: auto;
-    padding: 0;
-    box-sizing: border-box; */
-    /* position: relative;
-    padding-bottom: 75%; */
+    height: auto;
   }
