--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,8 +1,8 @@
 .place__paragraph {
     padding: 0;
-    margin: 0 0 26px;
+    margin: 0 0 23px;
     font-size: 18px;
-    line-height: 1.63;
+    line-height: 1.62;
     font-weight: 400;
     font-style: normal;
 }
@@ -19,8 +19,9 @@
     }
 }
 
-/* @media screen and (max-width: 320px) {
-    .place__paragraph {
-        margin: 0;
+@media screen and (max-width: 424px) {
+    .place__paragraph {        
+        line-height: 1.62;        
+        margin: 0 0 27px;
     }
-} */
+}
