--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -4,9 +4,16 @@
     align-self: flex-start;
 }
 
+@media screen and (max-width: 1279px) {
+    .place__text {
+        width: 48%;
+        padding-left: 32px;
+    }
+}
+
 @media screen and (max-width: 1023px) {
     .place__text {
-        width: 49.5%;
+        width: 49%;
         padding-left: 28px;
     }
 }
