--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,8 @@
 .place {
     width: 100%;
-    margin: 0 0 95px;
-    padding: 0;
+    margin: 0;
+    padding: 0 0 80px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -12,21 +13,27 @@
 
 @media screen and (max-width: 1279px) {
     .place {
-        margin-bottom: 84px;
+        padding-bottom: 79px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .place {
-        margin-bottom: 72px;
+        padding-bottom: 80px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .place {
-        margin-bottom: 50px;
+        padding-bottom: 50px;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
+    }
+}
+
+@media screen and (max-width: 424px) {
+    .place {
+        padding-bottom: 50px;
     }
 }
