--- a/blocks/places/__container/places__container.css
+++ b/blocks/places/__container/places__container.css
@@ -1,7 +1,7 @@
 .places__container {
   width: calc(100% - 100px*2);
     margin: auto;
-    padding: 94px 0 0;
+    padding: 92px 0 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,13 +10,15 @@
 
 @media screen and (max-width: 1279px) {
     .places__container {
-        width: calc(100% - 48px*2);
+        width: calc(100% - 48px*2);        
+        padding: 93px 0 10px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .places__container {
-        width: calc(100% - 24px*2);
+        width: calc(100% - 24px*2);        
+        padding: 94px 0 10px;
     }
 }
 
