--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,6 +1,6 @@
 .footer__link {
     padding: 0;
-    margin: 0 18px 0 0;
+    margin: 0 19px 0 0;
     font-size: 16px;
     line-height: 1.12;
     font-weight: 400;
@@ -18,7 +18,7 @@
 @media screen and (max-width: 767px) {
     .footer__link {
         font-size: 24px;
-        line-height: 1.12;
-        margin: 0 0 32px;
+        line-height: 1;
+        margin: 0;
     }
 }
