--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
     font-size: 12px;
-    line-height: 1.4;
-    font-weight: 700;
+    line-height: 1.5;
+    font-weight: bold;
     font-style: normal;
 }
 
-@media screen and (max-width: 424px) {
+/* @media screen and (max-width: 424px) {
     .intro__list-item {        
         line-height: 1.6;
     }
-}
+} */
