--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -4,6 +4,6 @@
     padding: 0;
     font-size: 12px;
     line-height: 1.5;
-    font-weight: 400;
+    font-weight: normal;
     font-style: normal;
 }
