--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,29 +1,26 @@
 .intro {
     width: 100%;
-    padding: 83px 394px 92px 100px;
+    padding: 91px 394px 91px 100px;
     box-sizing: border-box;
 }
 
 @media screen and (max-width: 1279px) {
     .intro {
-        padding: 81px 286px 92px 48px;
+        padding-right: 286px;
+        padding-left: 48px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .intro {
-        padding: 78px 24px 88px;
+        padding: 87px 24px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .intro {
-        padding: 64px 16px;
+        padding: 65px 17px;
     }
 }
 
-@media screen and (max-width: 424px) {
-    .intro {
-        padding: 53px 16px 64px;
-    }
 }
