--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,6 +1,6 @@
 .place__paragraph {
     padding: 0;
-    margin: 0 0 23px;
+    margin: 0 0 26px;
     font-size: 18px;
     line-height: 1.62;
     font-weight: 400;
@@ -14,14 +14,13 @@
 @media screen and (max-width: 1023px) {
     .place__paragraph {
         font-size: 16px;
-        line-height: 1.6;
-        margin: 0 0 24px;
+        line-height: 1.63;
+        margin: 0 0 25px;
     }
 }
 
-@media screen and (max-width: 424px) {
-    .place__paragraph {        
-        line-height: 1.62;        
+/* @media screen and (max-width: 767px) {
+    .place__paragraph {                
         margin: 0 0 27px;
     }
-}
+} */
