--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -20,11 +20,12 @@
 
 @media screen and (max-width: 767px) {
     .place__text {
-        width: calc(100% - 16px * 2);
+        /* width: calc(100% - 32px); */
+        width: 88.9%;
         padding: 0;
         margin: 0;
-        align-self: center;
-        /* padding-left: 16px;
-        padding-right: 16px; */
+        align-self: left;
+        padding-left: 16px;
+        
     }
 }
