--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,7 +3,7 @@
     padding: 0;
     margin: 0 0 51px;
     font-size: 72px;
-    line-height: 1.04;
+    line-height: 1.06;
     font-weight: 900;
     font-style: normal;
 }
@@ -12,14 +12,15 @@
     .place__title {
         width: 47.5%;        
         margin: 0 0 49px;        
-        line-height: 1.05;
+        line-height: 1.06;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .place__title {
-        font-size: 41px;
-        width: 44.8%;
+        font-size: 42px;
+        line-height: 1.1;
+        width: 45.5%;
     }
 }
 
@@ -34,6 +35,7 @@
     .place__title {
         width: calc(100% - 16px * 2);
         font-size: 32px;
+        padding-left: 16px;        
         margin: 0 0 34px;
     }
 }
