--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,6 @@
 .place {
     width: 100%;
-    margin: 0;
-    padding: 0 0 80px;
+    margin: 0;    
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
@@ -11,15 +10,19 @@
     /* gap: 40px; */
 }
 
-@media screen and (max-width: 1279px) {
-    .place {
-        padding-bottom: 79px;
-    }
+.place:last-of-type {
+    padding: 0;
 }
+
+/* @media screen and (max-width: 1279px) {
+    .place {
+        padding-bottom: 92px;
+    }
+} */
 
 @media screen and (max-width: 1023px) {
     .place {
-        padding-bottom: 80px;
+        padding-bottom: 73px;
     }
 }
 
@@ -27,13 +30,7 @@
     .place {
         padding-bottom: 50px;
         flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-    }
-}
-
-@media screen and (max-width: 424px) {
-    .place {
-        padding-bottom: 50px;
+        justify-content: flex-start;
+        align-items: flex-start;
     }
 }
