--- a/blocks/places/__container/places__container.css
+++ b/blocks/places/__container/places__container.css
@@ -1,30 +1,35 @@
 .places__container {
   width: calc(100% - 100px*2);
     margin: auto;
-    padding: 92px 0 10px;
+    padding: 94px 0 92px;
     display: flex;
     flex-direction: column;
     align-items: center;
     list-style-type: none;
+    gap: 78px;
 }
 
 @media screen and (max-width: 1279px) {
     .places__container {
         width: calc(100% - 48px*2);        
-        padding: 93px 0 10px;
+        gap: 76px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .places__container {
-        width: calc(100% - 24px*2);        
-        padding: 94px 0 10px;
+        width: calc(100% - 24px*2);
+        gap: 71px;
+        padding-bottom: 88px;
+        padding-top: 88px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .places__container {
+        align-items: flex-start;
+        gap: 49px;
         width: 100%;
-        padding: 64px 0 0;
+        padding: 65px 0 66px;
     }
 }
